Created modules for Best Practices and Categories

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:iRt7d9JsOVqpmksk2V2+NuM/dKqGvXf1Jb88qpxqZfo=
+APP_KEY=base64:7Z+7WkKrgRQpsFti+SLSd0K71JrLE4e5lFvmTVeTq5I=
 APP_DEBUG=true
 APP_URL=http://localhost
 ASSET_URL=
@@ -12,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=recycling_db
 DB_USERNAME=root
 DB_PASSWORD=
 
