--- a/.env
+++ b/.env
@@ -51,3 +51,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GEMINI_API_KEY=AIzaSyAMFA63oUC30Sc37lEKE_Igx6tg7PG6z7Y
