--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "require": {
     "php": "^8.0.2",
     "fruitcake/laravel-cors": "^2.0.5",
+    "google-gemini-php/laravel": "^1.0",
     "guzzlehttp/guzzle": "^7.2",
     "laravel/framework": "^9.0",
     "laravel/sanctum": "^2.14",
@@ -58,7 +59,10 @@
   "config": {
     "optimize-autoloader": true,
     "preferred-install": "dist",
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "php-http/discovery": true
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true
